# Interface-Change-Monitor

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  ecosystem.config.js  main.py  pyproject.toml
access/querys/: assignment.py  change.py  interface.py  query.py  user.py
access/utils/: adapter.py
business/api/: app.py
business/cli/: users.py
business/constants/: header.py
business/controllers/: assignment.py  change.py  config.py  interface.py  security.py  user.py
business/models/: assignment.py  change.py  user.py
business/updater/: handler.py
client/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tailwind.config.ts  tsconfig.json
client/.astro/: settings.json
client/app/: globals.css  page.tsx
client/constants/: activeUser.ts  assigmentStatus.ts  paths.ts  userStatus.ts  userType.ts
client/controllers/: assignments.ts  changes.ts  login.ts  session.ts  user.ts  users.ts
client/models/: assignments.ts  changes.ts  interfaces.ts  session.ts  statistics.ts  users.ts
client/utils/: date.ts
constants/: fields.py
data/libs/: database.py
data/schemas/: assignment.py  change.py  interface.py  user.py
docs/: PULL_REQUEST_TEMPLATE.md
examples/: response_consults.json
icm/: __main__.py
icm/access/: __init__.py
icm/business/: __init__.py
icm/constants/: __init__.py  (+2 more)
presentation/: package-lock.json  package.json  pnpm-lock.yaml
server/: .gitignore  Dockerfile  README.md  main.py  nginx.conf  requirements.txt
test/: __init__.py
utils/: config.py  log.py  operation.py
(+655 files in other folders)
