[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icm"
version = "0.1.0"
description = "Interface Change Monitor"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Angyee Marin", email = "angyeemarin.dev@gmail.com" }
]
keywords = ["icm", "network", "data-processing"]
dependencies = [
    "art>=6.4",
    "bcrypt==4.0.1",
    "click>=8.2.1",
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "paramiko>=3.5.1",
    "passlib==1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "PyJWT==2.10.1",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "uvicorn>=0.34.3"
]
urls = { Homepage = "https://github.com/xanv754/Interface-Change-Monitor" }

[project.optional-dependencies]
dev = ["black"]

[tool.setuptools]
packages = ["icm"]